[package]
name = "tcpworks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bincode = { version = "2.0.1", features = ["serde"] }
futures = "0.3.31"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["io-util", "rt", "net", "sync"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
